# minigl-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: triangle.rs
src/: lib.rs  opengl.rs
src/linux/: mod.rs
src/none/: mod.rs
src/win32/: mod.rs  window.rs
