[package]
name = "minigl"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.21", features = ["xlib", "glx"] }
